<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main01"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/app_name"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:onClick="onClick"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/start_game"
            android:id="@+id/start_game_button"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="#55ffffff"
            android:onClick="onStartGame"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/load_game"
            android:id="@+id/load_game_button"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="#55ffffff"
            android:onClick="onLoadGame"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/view_event_cg"
            android:id="@+id/view_cg_button"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="#55ffffff"
            android:onClick="onViewCG"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.01"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/settings"
            android:id="@+id/settings_button"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="#55ffffff"
            android:onClick="onSettings"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/credit"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>