<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigActivity">
    <ImageView android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/settings"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.075"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.38"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/bgm"
                android:background="#55ffffff"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.04"/>
            <ToggleButton
                android:id="@+id/bgm_toggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.38"
                android:textOn="On"
                android:textOff="Off"
                android:onClick="onBGMToggleClicked"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.075"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.38"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/sound"
                android:id="@+id/sound_on_button"
                android:background="#55ffffff"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.04"/>
            <ToggleButton
                android:id="@+id/sound_toggle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.38"
                android:textOn="On"
                android:textOff="Off"
                android:onClick="onSoundToggleClicked"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.075"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/back_button"
            android:onClick="onBack"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>