<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadGameActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg000"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/load_game"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"/>
        <TextView
            android:id="@+id/load_01"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onLoad1"/>
        <TextView
            android:id="@+id/load_02"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onLoad2"/>
        <TextView
            android:id="@+id/load_03"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onLoad3"/>
        <TextView
            android:id="@+id/load_04"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onLoad4"/>
        <TextView
            android:id="@+id/load_05"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onLoad5"/>
        <TextView
            android:id="@+id/load_06"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onLoad6"/>
        <TextView
            android:id="@+id/load_07"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onLoad7"/>
        <TextView
            android:id="@+id/load_08"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onLoad8"/>
        <TextView
            android:id="@+id/load_09"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onLoad9"/>
        <TextView
            android:id="@+id/load_10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onLoad10"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.075"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>
            <Button
                android:id="@+id/load_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/load_button"
                android:onClick="onLoad"/>
            <Button
                android:id="@+id/back_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/back_button"
                android:onClick="onBack"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>