<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveGameActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg000"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/save_game"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"/>
        <TextView
            android:id="@+id/save_01"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onSave1"/>
        <TextView
            android:id="@+id/save_02"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onSave2"/>
        <TextView
            android:id="@+id/save_03"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onSave3"/>
        <TextView
            android:id="@+id/save_04"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onSave4"/>
        <TextView
            android:id="@+id/save_05"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onSave5"/>
        <TextView
            android:id="@+id/save_06"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onSave6"/>
        <TextView
            android:id="@+id/save_07"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onSave7"/>
        <TextView
            android:id="@+id/save_08"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onSave8"/>
        <TextView
            android:id="@+id/save_09"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onSave9"/>
        <TextView
            android:id="@+id/save_10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"
            android:gravity="center"
            android:layout_marginBottom="2dp"
            android:textColor="#000000"
            android:text="TEXT"
            android:onClick="onSave10"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.075"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>
            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/save_button"
                android:onClick="onSave"/>
            <Button
                android:id="@+id/back_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/back_button"
                android:onClick="onBack"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>